--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.fzj.peerpub</groupId>
   <artifactId>peerpub</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>0.1.0-SNAPSHOT</version>
   <name>peerpub</name>
   <description>Scientific peer review tool</description>
@@ -96,7 +96,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-tomcat</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
