--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.florianlopes</groupId>
+      <artifactId>spring-mvc-test-utils</artifactId>
+      <version>1.0.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.jupiter.version}</version>
