--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <java.version>1.8</java.version>
     <checkstyle.version>3.0.0</checkstyle.version>
     <pmd.version>3.9.0</pmd.version>
+    <findbugs.version>3.0.5</findbugs.version>
     <junit.version>4.12</junit.version>
     <junit.jupiter.version>5.1.0</junit.jupiter.version>
     <junit.vintage.version>5.1.0</junit.vintage.version>
@@ -58,7 +59,6 @@
         <version>${pmd.version}</version>
         <executions>
           <execution>
-            <phase>validate</phase>
             <goals>
               <goal>check</goal>
               <goal>cpd-check</goal>
@@ -68,6 +68,34 @@
         <configuration>
           <!-- enable incremental analysis -->
           <analysisCache>true</analysisCache>
+          <includeTests>true</includeTests>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${findbugs.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <includeTests>true</includeTests>
+          <!--
+              Enables analysis which takes more memory but finds more bugs.
+              If you run out of memory, changes the value of the effort element
+              to 'Low'.
+          -->
+          <effort>Max</effort>
+          <!-- Reports all bugs (other values are medium and max) -->
+          <threshold>Low</threshold>
+          <!-- Produces XML report -->
+          <xmlOutput>true</xmlOutput>
+          <!-- Configures the directory in which the XML report is created -->
+          <findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -190,6 +218,26 @@
             <excludeRoot>target/generated-sources/stubs</excludeRoot>
           </excludeRoots>
           -->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${findbugs.version}</version>
+        <configuration>
+          <includeTests>true</includeTests>
+          <!--
+              Enables analysis which takes more memory but finds more bugs.
+              If you run out of memory, changes the value of the effort element
+              to 'Low'.
+          -->
+          <effort>Max</effort>
+          <!-- Reports all bugs (other values are medium and max) -->
+          <threshold>Low</threshold>
+          <!-- Produces XML report -->
+          <xmlOutput>true</xmlOutput>
+          <!-- Configures the directory in which the XML report is created -->
+          <findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
         </configuration>
       </plugin>
       <plugin>
