--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <junit.jupiter.version>5.1.0</junit.jupiter.version>
     <junit.vintage.version>5.1.0</junit.vintage.version>
     <junit.platform.version>1.1.0</junit.platform.version>
+    <skipIntegrationTests>false</skipIntegrationTests>
   </properties>
 
   <build>
@@ -148,6 +149,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.19.1</version>
         <configuration>
+          <skipITs>${skipIntegrationTests}</skipITs>
           <additionalClasspathElements>
             <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
           </additionalClasspathElements>
