Remove analysis of test classes from PMD, CPD and FindBugs. Test cases are always a hackish workaround, thus it is alright to be not perfect there.

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <configuration>
           <!-- enable incremental analysis -->
           <analysisCache>true</analysisCache>
-          <includeTests>true</includeTests>
+          <!-- <includeTests>true</includeTests> -->
         </configuration>
       </plugin>
       <plugin>
@@ -86,7 +86,7 @@
           </execution>
         </executions>
         <configuration>
-          <includeTests>true</includeTests>
+          <!-- <includeTests>true</includeTests> -->
           <!--
               Enables analysis which takes more memory but finds more bugs.
               If you run out of memory, changes the value of the effort element
