--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.github.mongobee</groupId>
+      <artifactId>mongobee</artifactId>
+      <version>0.13</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
