--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
-# Docs for camunda container see https://github.com/camunda/docker-camunda-bpm-platform
-version: '3'
+version: '2'
 
 services:
-  camunda:
-    image: camunda/camunda-bpm-platform:7.8.0
-    volumes:
-      - ./target/peerpub.war:/camunda/webapps/peerpub.war
-    environment:
-      - TZ=Europe/Berlin
+  app:
+    image: peerpub:app 
     ports:
       - "8080:8080"
+    links:
+      - mongodb
+  mongodb:
+    image: mongo:3.6
+    ports:
+      - "27017:27017"
 
 networks:
   default:
