--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -1,5 +1,13 @@
 ---
 spring:
+  profiles: default
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: peerpub
+---
+spring:
   profiles: test
   mongodb:
     embedded:
