--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,11 @@
       <version>4.0.0-2</version>
     </dependency>
     <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>font-awesome</artifactId>
+      <version>5.0.6</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
