Localize validation messages and configure sources. * Refactor Referable message to respect common practise with capital letter for the class * Add i18n/validation.properties message file * Configure Spring Boot to use both i18n/messages and i18n/validation as message sources * Invoke Hibernate JSR-303 Validator configuration via Spring Config to use   our custom message sources instead of Hibernate default ValidationMessages.properties

--- a/src/test/resources/config/application.yaml
+++ b/src/test/resources/config/application.yaml
@@ -3,7 +3,7 @@ spring:
   profiles: test
   messages:
     basename:
-      "i18n/messages"
+      "i18n/messages,i18n/validation"
   mongodb:
     embedded:
       version: 3.6.3
