--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -2,8 +2,7 @@
 spring:
   profiles: default
   messages:
-    basename:
-      "i18n/messages"
+    basename: "i18n/messages,i18n/validation"
   data:
     mongodb:
       host: localhost
@@ -13,8 +12,7 @@ spring:
 spring:
   profiles: docker
   messages:
-    basename:
-      "i18n/messages"
+    basename: "i18n/messages,i18n/validation"
   data:
     mongodb:
       host: mongodb
