--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,15 +38,15 @@ compile:
 unit-testing:
   stage: unit
   script:
-    - LANG=C mvn ${MAVEN_CLI_OPTS} test
+    - LANG=C mvn ${MAVEN_CLI_OPTS} test -Dcheckstyle.skip
 
 analysation:
   stage: analyse
   script:
     # run PMD, CPD and FindBugs
-    - LANG=C mvn ${MAVEN_CLI_OPTS} verify -DskipTests
+    - LANG=C mvn ${MAVEN_CLI_OPTS} verify -DskipTests -Dcheckstyle.skip
 
 integration-testing:
   stage: integration
   script:
-    - LANG=C mvn ${MAVEN_CLI_OPTS} verify -DskipUTs -Dpmd.skip=true -Dcpd.skip=true -Dfindbugs.skip=true
+    - LANG=C mvn ${MAVEN_CLI_OPTS} verify -DskipUTs -Dpmd.skip=true -Dcpd.skip=true -Dfindbugs.skip=true -Dcheckstyle.skip
