--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,11 @@
       <version>5.0.6</version>
     </dependency>
     <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>dna.js</artifactId>
+      <version>1.3.7</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
