Enable OpenClover-based test coverage reporting. * Enable with Maven plugin * Add to Gitlab CI job * Ignore local output directory in .gitignore

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,4 +49,5 @@ analysation:
 integration-testing:
   stage: integration
   script:
-    - LANG=C mvn ${MAVEN_CLI_OPTS} verify -DskipUTs -Dpmd.skip=true -Dcpd.skip=true -Dfindbugs.skip=true -Dcheckstyle.skip
+    - LANG=C mvn ${MAVEN_CLI_OPTS} verify -DskipUTs -Dpmd.skip -Dcpd.skip -Dfindbugs.skip -Dcheckstyle.skip
+    - LANG=C mvn clover:instrument clover:log -Dpmd.skip -Dcpd.skip -Dfindbugs.skip -Dcheckstyle.skip
