Exclude Application.java and Spring Configs from test coverage, as these most likely don't receive tests...

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,8 @@
           <!-- Verify that we can exclude some files from the instrumentation. Make sure the file we are excluding
                is referenced by other classes to ensure excluding is only done at the Clover level -->
           <excludes>
-            <exclude>**/*Dummy*.java</exclude>
+            <exclude>**/Application.java</exclude>
+            <exclude>**/config/*.java</exclude>
           </excludes>
         </configuration>
         <executions>
